--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@ body {
     font-family: 'Open Sans', sans-serif;
     background-color: #f8f9fe;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
     margin: 0;
+    overflow: hidden; /* Impede a barra de rolagem */
 }
 
 .container {
@@ -13,7 +15,7 @@ body {
 }
 
 .logo {
-    width: 100px; /* Adjust the logo size as needed */
+    width: 100px;
     height: auto;
     margin-bottom: 20px;
 }
@@ -28,4 +30,14 @@ p {
     font-size: 1.2em;
 }
 
-/* Add more styles or customize as needed */
+#countdown {
+    color: #3d5170;
+    font-size: 2.5em;
+    margin-top: 10px;
+}
+
+#countdown-text {
+    color: #8798ad;
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
